--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,17 +1,17 @@
 # main links links
 main:
+  - title: "About"
+    url: /about/
+    
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Under Review"
+    url: /unpublished/     
 
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
+  - title: "Other Outputs"
+    url: /other/    
+
   - title: "Blog Posts"
     url: /year-archive/
     
