--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Scientific Research Worker"
   location         : "China"
-  employer         : "JLU-NUDT"
+  employer         : "JLU"
   uri              : # URL
   email            : "653372728@qq.com" 
 
